-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.3, 6.5.0
-
None
-
iOS sim 16.4 Iphone SE 2020
-
-
843ce2759 (dev), 2805472e0 (6.5), 33402cdf6 (6.6)
Steps to reproduce:
- Open the attached example or run To-Do List example from Qt example - https://doc.qt.io/qt-6/qtquickcontrols-ios-todolist-example.html
- Run the app on iOS device or simulator
- Click on text area
- Write some text and click 'Done' button.
Expected: Entered text should be cleared as per the action assigned to the button.
Actual: The button gets highlighted but the action does not happen. Text handles appear instead.
Reproducibility: 100%
NOTES: Reproducible on Qt 6.4.3 too. Not reproducible on Android, macOS.
- relates to
-
QTBUG-117048 iOS: TextFields "context menu" stops TapHandler from working properly
-
- Closed
-
-
QTQAINFRA-5592
Qt Test Attack - Q2, 2023
-
- Open
-
| For Gerrit Dashboard: QTBUG-113975 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 486437,4 | iOS: Don't eat touch event when detecting edit menu tap gesture | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 486679,2 | iOS: Don't eat touch event when detecting edit menu tap gesture | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 486680,2 | iOS: Don't eat touch event when detecting edit menu tap gesture | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |